View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032613 | Open CASCADE | OCCT:Samples | public | 2021-10-12 09:35 | 2021-12-13 14:56 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032613: Samples - glfw compilation error on Linux | ||||
Description | glfw sample compilation fails for Linux target./occt.git/samples/glfw/GlfwOcctWindow.cpp:58:64: error: invalid conversion from ‘Display* {aka _XDisplay*}’ to ‘Standard_Character {aka char}’ [-fpermissive] myDisplay = new Aspect_DisplayConnection (glfwGetX11Display()); ~~~~~~~~~~~~~~~~~^~ | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Branch CR32613 has been created by kgv. SHA-1: 34043fc845eb2eb7abf6993224a97aa6066f6701 Detailed log of new commits: Author: kgv Date: Tue Oct 12 09:36:40 2021 +0300 0032613: Samples - glfw compilation error on Linux GlfwOcctWindow - added cast to Aspect_XDisplay*. Added auxiliary OCCT searching script as alternative to CMake config files. |
|
Please raise the patch - OCCT: branch CR32613. |
|
Combination - OCCT branch : IR-2021-10-15 master SHA - 475da0f1352e60eebf1432cf136042444c7c5488 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2021-10-15 SHA - bd88028c52a28c63c191e235d0af754d59b66c81 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17699.720000000394 / 17936.010000000137 [-1.32%] Products Total CPU difference: 11665.880000000112 / 11621.340000000107 [+0.38%] Windows-64-VC14: OCCT Total CPU difference: 19656.34375 / 19690.109375 [-0.17%] Products Total CPU difference: 12872.390625 / 12807.375 [+0.51%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32613 has been deleted by kgv. SHA-1: 34043fc845eb2eb7abf6993224a97aa6066f6701 |
occt: master 34043fc8 2021-10-12 06:36:40 Details Diff |
0032613: Samples - glfw compilation error on Linux GlfwOcctWindow - added cast to Aspect_XDisplay*. Added auxiliary OCCT searching script as alternative to CMake config files. |
Affected Issues 0032613 |
|
add - samples/glfw/adm/cmake/FindOpenCASCADE.cmake | Diff File | ||
mod - samples/glfw/CMakeLists.txt | Diff File | ||
mod - samples/glfw/GlfwOcctWindow.cpp | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-10-12 09:35 | kgv | New Issue | |
2021-10-12 09:35 | kgv | Assigned To | => kgv |
2021-10-12 09:37 | git | Note Added: 0104597 | |
2021-10-12 09:38 | kgv | Description Updated | |
2021-10-12 10:06 | kgv | Test case number | => N/A |
2021-10-12 10:06 | kgv | Note Added: 0104598 | |
2021-10-12 10:06 | kgv | Assigned To | kgv => bugmaster |
2021-10-12 10:06 | kgv | Status | new => resolved |
2021-10-12 10:06 | kgv | Status | resolved => reviewed |
2021-10-12 10:06 | kgv | Relationship added | child of 0032308 |
2021-10-16 10:03 | smoskvin | Note Added: 0104659 | |
2021-10-16 10:03 | smoskvin | Status | reviewed => tested |
2021-10-16 11:13 | kgv | Changeset attached | => occt master 34043fc8 |
2021-10-16 11:13 | kgv | Assigned To | bugmaster => kgv |
2021-10-16 11:13 | kgv | Status | tested => verified |
2021-10-16 11:13 | kgv | Resolution | open => fixed |
2021-12-13 14:56 | git | Note Added: 0105883 |